# stable-preferences

./: .gitignore  README.md  denoiser_input.pt  latent_hint.pt  latents.pt  pyproject.toml  ref_cond_xt.pt  ref_xt.pt  requirements.txt  stable_preferences.yml  unet_out.pt
bash_scripts/: evaluation_attention_based_lora.sh
stable_preferences/: data.py  example.py  example_binary_feedback.py  fields.py  generation_trajectory.py  simple_prompt_runner.py  spaces.py  utils.py
stable_preferences/attention_based/: generator.py  main.py
stable_preferences/clip_guided/: clip_guided.py  clip_guided_stable_diffusion.py  hf_example.py
stable_preferences/configs/: attention_based.yaml  clip_guided.yaml  custom_inversion.yaml  embedding_inversion.yaml  evaluation_attention_based.yaml  evaluation_attention_based_visual.yaml  example.yaml  example_binary_feedback.yaml  example_binary_feedback_jt.yaml  few_shot.yaml  object_binary_feedback.yaml  simple_prompt_runner.yaml  textual_inversion.yaml  textual_inversion_inference.yaml
stable_preferences/evaluation/: .gitignore  README.md  auto_evaluation.ipynb  eval.py
stable_preferences/evaluation_attention_based/: analyze_metrics copy.py  analyze_metrics.py  analyze_metrics_expB.py  analyze_target_feedback_metrics.py  evaluation_attention_based_visual.py  main.py  plots.ipynb
stable_preferences/few_shot/: model.py  train.py
stable_preferences/hps_lora/: .gitignore
stable_preferences/human_preference_dataset/: .gitignore  README.md  hpc.py  prompts.py  scratch.ipynb  utils.py
stable_preferences/models/: hps.py  unet_utils.py
(+89 files in other folders)
